[package]
name = "tacview"
version = "0.1.3"
authors = ["Markus Ast <m+cargo@rkusa.st>"]
license = "MIT OR Apache-2.0"
description = "ACMI (Tacview) flight recordings v2.2 parser and writer."
repository = "https://github.com/rkusa/tacview"
edition = "2021"

[dependencies]
thiserror = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
